--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span
             class="bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600"
           >
-            Kartik Gopal Madivala
+             Deepak Naik
           </span>
         </div>
         <nav class="flex space-x-6 text-lg">
