--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             class="absolute -inset-2 bg-gradient-to-r from-purple-600 to-pink-500 rounded-full opacity-75 blur-xl"
           ></div>
           <img
-            src="./img/kartik.jpg"
+            src="./img/deepak.jpg"
             class="relative rounded-full border-4 border-black shadow-2xl"
             width="500"
             height="500"
@@ -136,20 +136,7 @@
           </span>
         </h2>
         <div class="grid md:grid-cols-3 gap-6">
-          <div
-            class="bg-white/5 p-6 rounded-2xl hover:bg-white/10 transition-colors skill-pulse"
-          >
-            <i class="fa-brands fa-react fa-2xl" style="color: #61dafb"></i>
-            <h3 class="text-xl font-semibold mb-2">React.js</h3>
-            <p class="text-gray-400">Advanced component-based architecture</p>
-          </div>
-          <div
-            class="bg-white/5 p-6 rounded-2xl hover:bg-white/10 transition-colors skill-pulse"
-          >
-            <i class="fa-brands fa-node fa-2xl" style="color: #ffffff"></i>
-            <h3 class="text-xl font-semibold mb-2">Node.js</h3>
-            <p class="text-gray-400">Scalable backend solutions</p>
-          </div>
+          
           <div
             class="bg-white/5 p-6 rounded-2xl hover:bg-white/10 transition-colors skill-pulse"
           >
@@ -193,23 +180,7 @@
           </span>
         </h2>
         <div class="grid md:grid-cols-2 gap-8">
-          <div class="project-card relative overflow-hidden rounded-2xl group">
-            <img src="./img/sd.png" class="w-full h-auto object-cover" />
-            <div
-              class="project-overlay absolute inset-0 bg-black/70 opacity-0 flex items-center justify-center transition-opacity"
-            >
-              <div class="text-center">
-                <h3 class="text-2xl font-bold mb-2">Student Management</h3>
-                <p class="text-gray-300 mb-4">Full-stack PHP Application</p>
-                <a
-                  href="https://github.com/kartikgopal01/student-data-management-"
-                  class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
-                >
-                  View Project
-                </a>
-              </div>
-            </div>
-          </div>
+         
           <div class="project-card relative overflow-hidden rounded-2xl group">
             <img src="./img/di.png" class="w-full h-auto object-cover" />
             <div
