--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </p>
           <div class="flex space-x-4">
             <a
-              href="https://drive.google.com/file/d/1xKDK_cjPhwmBLOi8jlmnqlWlKEkVHFxQ/view?usp=sharing"
+              href="#"
               class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-3 rounded-full hover:scale-105 transition-transform"
               target="_blank"
             >
@@ -190,7 +190,7 @@
                 <h3 class="text-2xl font-bold mb-2">Charity Platform</h3>
                 <p class="text-gray-300 mb-4">Responsive Web App</p>
                 <a
-                  href="https://github.com/kartikgopal01/charity-fund-raiser-management"
+                  href="#"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
@@ -209,7 +209,7 @@
                   Responsive Web Page Which Provides Information About Herbs
                 </p>
                 <a
-                  href="https://github.com/kartikgopal01/interactive-herbal-plants"
+                  href="#"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
@@ -230,7 +230,7 @@
                   Flask Web Application Which Provides Information About Careers
                 </p>
                 <a
-                  href="https://github.com/kartikgopal01/Career-Advisor-Bot"
+                  href="#"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
@@ -249,7 +249,7 @@
                   Flask Web Application Which Analyzes Uber Trips
                 </p>
                 <a
-                  href="https://github.com/kartikgopal01/Career-Advisor-Bot"
+                  href="#"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
@@ -257,46 +257,28 @@
               </div>
             </div>
           </div>
-          <div class="project-card relative overflow-hidden rounded-2xl group">
-            <img src="./img/tm.png" class="w-full h-auto object-cover" />
-            <div
-              class="project-overlay absolute inset-0 bg-black/70 opacity-0 flex items-center justify-center transition-opacity"
-            >
-              <div class="text-center">
-                <h3 class="text-2xl font-bold mb-2">Task Manager</h3>
-                <p class="text-gray-300 mb-4">
-                  React Web Application For Managing Tasks
-                </p>
-                <a
-                  href="https://github.com/kartikgopal01/Task_Management_Dashboard"
-                  class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
-                >
-                  View Project
-                </a>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </section>
       <footer class="mt-32 py-12 border-t border-white/10" id="Contact">
         <div class="container mx-auto text-center">
           <div class="flex justify-center space-x-8">
             <a
-              href="https://github.com/kartikgopal01"
+              href="https://github.com/deepaknaik-16"
               target="_blank"
               class="text-white hover:text-purple-400 transition-colors transform hover:scale-110"
             >
               <i class="ri-github-fill text-5xl"></i>
             </a>
             <a
-              href="https://www.linkedin.com/in/kartik-gopal-4552452a1/"
+              href="https://www.linkedin.com/in/deepak-naik5a2847272/"
               target="_blank"
               class="text-white hover:text-blue-500 transition-colors transform hover:scale-110"
             >
               <i class="ri-linkedin-box-fill text-5xl"></i>
             </a>
             <a
-              href="https://instagram.com/_kartik_gopal_"
+              href="https://instagram.com/deepak_naik4347"
               target="_blank"
               class="text-white hover:text-pink-500 transition-colors transform hover:scale-110"
             >
@@ -304,7 +286,7 @@
             </a>
           </div>
           <p class="mt-6 text-gray-400 text-sm">
-            © 2024 Kartik Gopal Madivala. All Rights Reserved.
+            © 2024 Deepak Naik. All Rights Reserved.
           </p>
         </div>
       </footer>
