updated resume section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </p>
           <div class="flex space-x-4">
             <a
-              href="#"
+              href="https://drive.google.com/file/d/1mpecs1NcTN6jPKmaJCXyce74H98bQL_t/view?usp=sharing"
               class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-3 rounded-full hover:scale-105 transition-transform"
               target="_blank"
             >
