--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   Responsive Web Page Which Provides Information About Herbs
                 </p>
                 <a
-                  href="#"
+                  href="https://github.com/DeepakNaik-16/Herbal_garden/"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
@@ -249,7 +249,7 @@
                   Flask Web Application Which Analyzes Uber Trips
                 </p>
                 <a
-                  href="#"
+                  href="https://github.com/DeepakNaik-16/Uber_Trip_Analysis"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
