--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <h3 class="text-2xl font-bold mb-2">Charity Platform</h3>
                 <p class="text-gray-300 mb-4">Responsive Web App</p>
                 <a
-                  href="#"
+                  href="https://github.com/DeepakNaik-16/Charity_Fund_Raiser"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
@@ -230,7 +230,7 @@
                   Flask Web Application Which Provides Information About Careers
                 </p>
                 <a
-                  href="#"
+                  href="https://github.com/DeepakNaik-16/CareerWise"
                   class="px-6 py-2 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full"
                 >
                   View Project
